<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/viewHeader"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/header_background"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/layoutProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/viewHeader"
            app:layout_constraintTop_toBottomOf="@id/viewHeader">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:gravity="center"
                        android:text="@string/ajay_soni"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textAbout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/textAbout"
                        android:textColor="@color/colorTextSecondary"
                        android:textSize="17sp"
                        app:layout_constraintTop_toBottomOf="@id/textName" />

                    <TextView
                        android:id="@+id/textPosts"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:text="@string/_1000"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@id/textFollowes"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textAbout" />

                    <TextView
                        android:id="@+id/textFollowes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:gravity="center"
                        android:text="@string/_5M"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@id/textFollowing"
                        app:layout_constraintStart_toEndOf="@id/textPosts"
                        app:layout_constraintTop_toBottomOf="@id/textAbout" />

                    <TextView
                        android:id="@+id/textFollowing"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:text="@string/_532"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/textFollowes"
                        app:layout_constraintTop_toBottomOf="@id/textAbout" />

                    <TextView
                        android:id="@+id/textPostLable"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/post"
                        android:textAllCaps="true"
                        android:textColor="@color/colorTextSecondary"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/textPosts"
                        app:layout_constraintStart_toStartOf="@id/textPosts"
                        app:layout_constraintTop_toBottomOf="@id/textPosts" />

                    <TextView
                        android:id="@+id/textFollowerLable"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/followers"
                        android:textAllCaps="true"
                        android:textColor="@color/colorTextSecondary"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/textFollowes"
                        app:layout_constraintStart_toStartOf="@id/textFollowes"
                        app:layout_constraintTop_toBottomOf="@id/textFollowes" />

                    <TextView
                        android:id="@+id/textFollowingLable"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/following"
                        android:textAllCaps="true"
                        android:textColor="@color/colorTextSecondary"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/textFollowing"
                        app:layout_constraintStart_toStartOf="@id/textFollowing"
                        app:layout_constraintTop_toBottomOf="@id/textFollowing" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </FrameLayout>

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/post4"
            app:layout_constraintBottom_toTopOf="@id/layoutProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/layoutProfile"
            app:riv_border_width="1dp"
            app:riv_oval="true" />

        <TextView
            android:id="@+id/textTags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/tags"
            android:textAllCaps="true"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutProfile" />

        <LinearLayout
            android:id="@+id/layoutTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/textTags">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@drawable/tags_background"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/stylish"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@drawable/tags_background"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/innocent"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@drawable/tags_background"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/adventurous"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textCollection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/collection"
            android:textAllCaps="true"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutTags" />

        <HorizontalScrollView
            android:id="@+id/layoutCollection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/textCollection">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <include layout="@layout/layout_collection_1" />

                <include layout="@layout/layout_collection_2" />

                <include layout="@layout/layout_collection_3" />

                <include layout="@layout/layout_collection_4" />

            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/textLatestPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/latest_post"
            android:textAllCaps="true"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutCollection" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            app:columnCount="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLatestPost"
            app:useDefaultMargins="true">

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="0dp"
            android:layout_height="95dp"
            android:scaleType="centerCrop"
            android:src="@drawable/post1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:riv_corner_radius="6dp"/>

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="0dp"
                android:layout_height="95dp"
                android:scaleType="centerCrop"
                android:src="@drawable/post2"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:riv_corner_radius="6dp"/>

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="0dp"
                android:layout_height="95dp"
                android:scaleType="centerCrop"
                android:src="@drawable/post3"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:riv_corner_radius="6dp"/>

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="0dp"
                android:layout_height="95dp"
                android:scaleType="centerCrop"
                android:src="@drawable/post4"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:riv_corner_radius="6dp"/>

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="0dp"
                android:layout_height="95dp"
                android:scaleType="centerCrop"
                android:src="@drawable/post5"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:riv_corner_radius="6dp"/>

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="0dp"
                android:layout_height="95dp"
                android:scaleType="centerCrop"
                android:src="@drawable/post6"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:riv_corner_radius="6dp"/>
            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="0dp"
                android:layout_height="95dp"
                android:scaleType="centerCrop"
                android:src="@drawable/post2"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:riv_corner_radius="6dp"/>

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="0dp"
                android:layout_height="95dp"
                android:scaleType="centerCrop"
                android:src="@drawable/post3"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:riv_corner_radius="6dp"/>

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="0dp"
                android:layout_height="95dp"
                android:scaleType="centerCrop"
                android:src="@drawable/post4"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:riv_corner_radius="6dp"/>

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="0dp"
                android:layout_height="95dp"
                android:scaleType="centerCrop"
                android:src="@drawable/post5"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:riv_corner_radius="6dp"/>

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="0dp"
                android:layout_height="95dp"
                android:scaleType="centerCrop"
                android:src="@drawable/post6"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:riv_corner_radius="6dp"/>
        </androidx.gridlayout.widget.GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>